// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmailIntegrationCreateForwarding component should render -copied!- button because the email address has just been copied 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title={
      <Breadcrumb
        aria-label="breadcrumb"
        listTag="ol"
        tag="nav"
      >
        <BreadcrumbItem
          tag="li"
        >
          <Link
            to="/app/settings/channels/email"
          >
            Email
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          active={true}
          tag="li"
        >
          my integration
           
          <span
            className="text-faded"
          >
            myintegration@gorgias.io
          </span>
        </BreadcrumbItem>
      </Breadcrumb>
    }
  />
  <Container
    className="pageContainer"
    fluid={true}
    tag="div"
  >
    <h1>
      Let's setup email forwarding
    </h1>
    <div>
      <div
        className="mb-4"
      >
        <p>
          Forward emails from 
          <b>
            myintegration@gorgias.io
          </b>
           to the address below.
        </p>
        <InputGroup
          tag="div"
        >
          <Input
            id="forwarding-email"
            readOnly={true}
            type="text"
            value="forwardingaddress@emails.gorgias.com"
          />
          <InputGroupAddon
            addonType="append"
            tag="div"
          >
            <ForwardRef
              data-clipboard-target="#forwarding-email"
              id="copy-forwarding-email"
              intent="primary"
            >
              <i
                className="material-icons mr-2"
              >
                file_copy
              </i>
              Copied!
            </ForwardRef>
          </InputGroupAddon>
        </InputGroup>
      </div>
      <div
        className="mb-4"
      >
        <p>
          Below are some handful tutorial to setup email forwarding depending on your email provider:
        </p>
        <div
          className="d-flex flex-wrap"
        >
          <ForwardRef
            className="forwardingCard"
            intent="secondary"
            key="0"
            onClick={[Function]}
          >
            <img
              alt="Google Groups logo"
              src="test-file-stub"
            />
            <div>
              Google Groups
            </div>
          </ForwardRef>
          <ForwardRef
            className="forwardingCard"
            intent="secondary"
            key="1"
            onClick={[Function]}
          >
            <img
              alt="Outlook logo"
              src="test-file-stub"
            />
            <div>
              Outlook
            </div>
          </ForwardRef>
          <ForwardRef
            className="forwardingCard"
            intent="secondary"
            key="2"
            onClick={[Function]}
          >
            <img
              alt="Office 365 logo"
              src="test-file-stub"
            />
            <div>
              Office 365
            </div>
          </ForwardRef>
          <ForwardRef
            className="forwardingCard"
            intent="secondary"
            key="3"
            onClick={[Function]}
          >
            <img
              alt="Microsoft Exchange logo"
              src="test-file-stub"
            />
            <div>
              Microsoft Exchange
            </div>
          </ForwardRef>
          <ForwardRef
            className="forwardingCard"
            intent="secondary"
            key="4"
            onClick={[Function]}
          >
            <img
              alt="Zoho Mail logo"
              src="test-file-stub"
            />
            <div>
              Zoho Mail
            </div>
          </ForwardRef>
        </div>
        <p>
          Using GMail or G Suite?
           
          <Link
            to="/app/settings/channels/email/new"
          >
            Connect your account in one click.
          </Link>
        </p>
      </div>
      <ForwardRef
        className=""
        color="primary"
        isDisabled={false}
        onClick={[Function]}
        type="submit"
      >
        Verify email forwarding
      </ForwardRef>
    </div>
  </Container>
</div>
`;

exports[`EmailIntegrationCreateForwarding component should render 1`] = `
<div
  className="full-width"
>
  <PageHeader
    title={
      <Breadcrumb
        aria-label="breadcrumb"
        listTag="ol"
        tag="nav"
      >
        <BreadcrumbItem
          tag="li"
        >
          <Link
            to="/app/settings/channels/email"
          >
            Email
          </Link>
        </BreadcrumbItem>
        <BreadcrumbItem
          active={true}
          tag="li"
        >
          my integration
           
          <span
            className="text-faded"
          >
            myintegration@gorgias.io
          </span>
        </BreadcrumbItem>
      </Breadcrumb>
    }
  />
  <Container
    className="pageContainer"
    fluid={true}
    tag="div"
  >
    <h1>
      Let's setup email forwarding
    </h1>
    <div>
      <div
        className="mb-4"
      >
        <p>
          Forward emails from 
          <b>
            myintegration@gorgias.io
          </b>
           to the address below.
        </p>
        <InputGroup
          tag="div"
        >
          <Input
            id="forwarding-email"
            readOnly={true}
            type="text"
            value="forwardingaddress@emails.gorgias.com"
          />
          <InputGroupAddon
            addonType="append"
            tag="div"
          >
            <ForwardRef
              data-clipboard-target="#forwarding-email"
              id="copy-forwarding-email"
              intent="primary"
            >
              <i
                className="material-icons mr-2"
              >
                file_copy
              </i>
              Copy
            </ForwardRef>
          </InputGroupAddon>
        </InputGroup>
      </div>
      <div
        className="mb-4"
      >
        <p>
          Below are some handful tutorial to setup email forwarding depending on your email provider:
        </p>
        <div
          className="d-flex flex-wrap"
        >
          <ForwardRef
            className="forwardingCard"
            intent="secondary"
            key="0"
            onClick={[Function]}
          >
            <img
              alt="Google Groups logo"
              src="test-file-stub"
            />
            <div>
              Google Groups
            </div>
          </ForwardRef>
          <ForwardRef
            className="forwardingCard"
            intent="secondary"
            key="1"
            onClick={[Function]}
          >
            <img
              alt="Outlook logo"
              src="test-file-stub"
            />
            <div>
              Outlook
            </div>
          </ForwardRef>
          <ForwardRef
            className="forwardingCard"
            intent="secondary"
            key="2"
            onClick={[Function]}
          >
            <img
              alt="Office 365 logo"
              src="test-file-stub"
            />
            <div>
              Office 365
            </div>
          </ForwardRef>
          <ForwardRef
            className="forwardingCard"
            intent="secondary"
            key="3"
            onClick={[Function]}
          >
            <img
              alt="Microsoft Exchange logo"
              src="test-file-stub"
            />
            <div>
              Microsoft Exchange
            </div>
          </ForwardRef>
          <ForwardRef
            className="forwardingCard"
            intent="secondary"
            key="4"
            onClick={[Function]}
          >
            <img
              alt="Zoho Mail logo"
              src="test-file-stub"
            />
            <div>
              Zoho Mail
            </div>
          </ForwardRef>
        </div>
        <p>
          Using GMail or G Suite?
           
          <Link
            to="/app/settings/channels/email/new"
          >
            Connect your account in one click.
          </Link>
        </p>
      </div>
      <ForwardRef
        className=""
        color="primary"
        isDisabled={false}
        onClick={[Function]}
        type="submit"
      >
        Verify email forwarding
      </ForwardRef>
    </div>
  </Container>
</div>
`;
